<resources>
    <string name="app_name">Android Showcase</string>
    <string name="library_name">%s components</string>
    <string name="not_added">Unfortunately this component hasn\'t been added yet</string>
    <string name="components">Components</string>
    <string name="text_button">Text Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="contained_button">Contained Button</string>
    <string name="title">Title</string>
    <string name="add_icon">Add Icon</string>
    <string name="remove_icon">Remove Icon</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="third">Third</string>
    <string name="single_selecting">Single Selecting</string>
    <string name="extended">Extended</string>
    <string name="finished">Finished</string>
    <string name="title_text">Title Text</string>
    <string name="change_title">Change Title</string>
    <string name="leading_icon">Leading Icon</string>
    <string name="password_mode">Password Mode</string>
    <string name="clear_text_mode">Clear Text Mode</string>
    <string name="custom_icon_mode">Custom Icon Mode</string>
    <string name="helper_text">Helper Text</string>
    <string name="change_helper">Change Helper</string>
    <string name="change_counter">Change Counter</string>
    <string name="error">Error</string>
    <string name="counter">Max Counter</string>
    <string name="suffix">Suffix</string>
    <string name="prefix">Prefix</string>
    <string name="clear_mode">Clear Mode</string>
    <string name="outlined_text_field">Outlined Text Field</string>
    <string name="filled_text_field">Filled Text Field</string>
    <string name="hint">Hint</string>

    <string name="blank" />

    <string name="tab_round_corner_progress_bar">Simple</string>
    <string name="tab_centered_round_corner_progress_bar">Centered</string>
    <string name="tab_icon_round_corner_progress_bar">Icon</string>
    <string name="tab_text_round_corner_progress_bar">Text</string>
    <string name="tab_indeterminate_round_corner_progress_bar">Indeterminate</string>

    <string name="title_round_corner_progress_bar">Round Corner Progress Bar</string>
    <string name="title_centered_round_corner_progress_bar">Centered Round Corner Progress Bar</string>
    <string name="title_icon_round_corner_progress_bar">Icon Round Corner Progress Bar</string>
    <string name="title_text_round_corner_progress_bar">Text Round Corner Progress Bar</string>
    <string name="title_indeterminate_round_corner_progress_bar">Indeterminate Round Corner Progress Bar</string>
    <string name="title_indeterminate_centered_round_corner_progress_bar">Indeterminate Centered Round Corner Progress Bar</string>

    <string name="decrease_2">-2</string>
    <string name="decrease_20">-20</string>
    <string name="increase_2">+2</string>
    <string name="increase_20">+20</string>
    <string name="enable_animation">Enable Animation</string>
    <string name="apply_gradient_progress_color">Gradient Progress Color</string>
    <string name="gravity_start">Start</string>
    <string name="gravity_end">End</string>
    <string name="inside_gravity">Inside Text Gravity</string>
    <string name="outside_gravity">Outside Text Gravity</string>
    <string name="text_position_priority">Text Position Priority</string>
    <string name="priority_inside">Inside</string>
    <string name="priority_outside">Outside</string>

    <string name="label_indeterminate">Indeterminate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_level">Level</string>
    <string name="label_amplitude">Amplitude</string>
    <string name="label_speed">Speed</string>
    <string name="label_length">Length</string>

</resources>