<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.libraries.material.textfield.MaterialTextFieldActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/new_title_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:paddingHorizontal="10dp"
        android:hint="@string/title"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@id/change_title_button"
        app:layout_constraintEnd_toStartOf="@id/change_title_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/change_title_button"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/change_title_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/change_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_title_text"
        app:layout_constraintTop_toBottomOf="@+id/text_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>